<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegisterFragment">


    <TextView
        android:id="@+id/RegistroTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/titulo_registro"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/nombreRegistroTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreRegistroTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_pencil_action_name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/nombre"

        android:inputType="textPersonName|text"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/apellidoRegistroTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegistroTitle" />

    <EditText
        android:id="@+id/apellidoRegistroTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_pencil_action_name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/apellido"
        android:inputType="textPersonName|text"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/telefonoRegistroTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreRegistroTxt" />

    <EditText
        android:id="@+id/telefonoRegistroTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_phone3_action_name"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/emailRegistroTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoRegistroTxt" />

    <EditText
        android:id="@+id/emailRegistroTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordRegistroTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefonoRegistroTxt" />

    <EditText
        android:id="@+id/passwordRegistroTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/RegistroButton"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegistroTxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/RegistroButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="173dp"
        android:background="@drawable/ic_button"
        android:hint="@string/registro"
        android:text="@string/registro"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegistroTxt" />


</androidx.constraintlayout.widget.ConstraintLayout>