<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    >


    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:gravity="center"
        android:text="@string/titulo_login"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/emailLoginTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_toTopOf="@+id/emailLoginTxt"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailLoginTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordLoginTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        tools:layout_constraintBottom_toTopOf="@+id/passwordLoginTxt"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/loginTitle" />

    <EditText
        android:id="@+id/passwordLoginTxt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_field"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLoginTxt"
        tools:layout_constraintBottom_toTopOf="@+id/loginButton"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/emailLoginTxt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/ic_button"
        android:hint="@string/login"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginTxt"
        tools:layout_constraintBottom_toTopOf="@+id/recovery_password"
        tools:layout_constraintEnd_toEndOf="parent"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/passwordLoginTxt" />

    <TextView
        android:id="@+id/recovery_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="248dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/recovery_password"
        app:layout_constraintBottom_toTopOf="@+id/primer_text_registro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        tools:layout_constraintEnd_toStartOf="@+id/primer_text_registro"
        tools:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <TextView
        android:id="@+id/primer_text_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginBottom="180dp"
        android:text="@string/primer_text_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/segundo_text_registro"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/segundo_text_registro"
        android:layout_width="64dp"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="176dp"
        android:text="@string/segundo_text_registro"
        android:textSize="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/primer_text_registro" />

</androidx.constraintlayout.widget.ConstraintLayout>